WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138955
REGRESSION (
r176415
): Can get stuck, unable to invoke any DataDetectors popovers
https://bugs.webkit.org/show_bug.cgi?id=138955
Summary
REGRESSION (r176415): Can get stuck, unable to invoke any DataDetectors popovers
Tim Horton
Reported
2014-11-21 02:48:03 PST
REGRESSION (
r176415
): Can get stuck, unable to invoke any DataDetectors popovers
Attachments
Patch
(3.80 KB, patch)
2014-11-21 02:48 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(4.98 KB, patch)
2014-11-21 15:49 PST
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-11-21 02:48:54 PST
Created
attachment 242032
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2014-11-21 02:49:43 PST
<
rdar://problem/19056442
>
Tim Horton
Comment 3
2014-11-21 10:27:03 PST
This is insufficient in the multiple view case.
Tim Horton
Comment 4
2014-11-21 15:49:43 PST
Created
attachment 242089
[details]
Patch
Tim Horton
Comment 5
2014-11-21 15:53:14 PST
http://trac.webkit.org/changeset/176480
Tim Horton
Comment 6
2014-11-21 16:52:03 PST
http://trac.webkit.org/changeset/176486
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug