REGRESSION (r176415): Can get stuck, unable to invoke any DataDetectors popovers https://bugs.webkit.org/show_bug.cgi?id=138955 <rdar://problem/19056442>

Reviewed by Anders Carlsson.

* UIProcess/API/mac/WKView.mm:
(-[WKView mouseDown:]):
* UIProcess/mac/WKActionMenuController.h:
* UIProcess/mac/WKActionMenuController.mm:
(-[WKActionMenuController wkView:willHandleMouseDown:]):
(-[WKActionMenuController didCloseMenu:withEvent:]):
(-[WKActionMenuController menuNeedsUpdate:]):
Keep track of whether we have called shouldUseActionsWithContext: on a
DDActionContext; if we get a mouseDown without having seen didCloseMenu:
(and thus don't properly pair the shouldUseActionsWithContext: with a didUseActions),
tear down the old DDActionContext before proceeding.


Canonical link: https://commits.webkit.org/156860@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176480 268f45cc-cd09-0410-ab3c-d52691b4dbfc